# auth

./: .env  Cargo.toml
migrations/2023-12-10-002406_users/: down.sql  up.sql
src/: db.rs  main.rs  schema.rs
src/config/: config.rs
src/middleware/: jwt_auth.rs
src/models/: auth.rs  mod.rs  response.rs  user.rs
